[tool.poetry]
name = "rae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
lxml = "^4.6.2"
pandas = "^1.2.3"
selenium = "^3.141.0"
cloudscraper = "^1.2.58"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
